<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/general_header">

        <EditTextPreference
            app:key="url"
            app:title="@string/url_title"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="@string/url_default"
        />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/uid_header">

        <SwitchPreferenceCompat
            app:key="uid_enable"
            app:title="@string/uid_enable_title"
            app:defaultValue="@bool/uid_enable_default"
        />

        <SwitchPreferenceCompat
            app:key="uid_hex"
            app:title="@string/uid_hex_title"
            app:dependency="uid_enable"
            app:defaultValue="@bool/uid_hex_default"
        />
        <SwitchPreferenceCompat
            app:key="uid_reverse"
            app:title="@string/uid_reverse_title"
            app:dependency="uid_enable"
            app:defaultValue="@bool/uid_reverse_default"
        />
        <SwitchPreferenceCompat
            app:key="uid_enter"
            app:title="@string/uid_enter_title"
            app:dependency="uid_enable"
            app:defaultValue="@bool/uid_enter_default"
        />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
